RESOLVED FIXED177324
Close WebRTC sockets when marked as defunct
https://bugs.webkit.org/show_bug.cgi?id=177324
Summary Close WebRTC sockets when marked as defunct
youenn fablet
Reported 2017-09-21 14:00:06 PDT
As part of bug 174270, we are closing webrtc sockets when the network process is getting suspended. Instead of that, we can detect at resume time whether sockets are defunct or not.
Attachments
Patch (13.05 KB, patch)
2017-09-21 14:04 PDT, youenn fablet
no flags
Patch (15.72 KB, patch)
2017-09-22 08:39 PDT, youenn fablet
no flags
Patch (3.30 KB, patch)
2018-01-05 15:46 PST, youenn fablet
no flags
Patch for landing (3.33 KB, patch)
2018-01-05 16:46 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-09-21 14:04:46 PDT
Build Bot
Comment 2 2017-09-21 14:06:32 PDT
Attachment 321476 [details] did not pass style-queue: ERROR: Source/ThirdParty/libwebrtc/Source/webrtc/base/socket.h:184: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 3 2017-09-22 08:39:54 PDT
Build Bot
Comment 4 2017-09-22 10:50:44 PDT
Attachment 321550 [details] did not pass style-queue: ERROR: Source/ThirdParty/libwebrtc/Source/webrtc/base/socket.h:184: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 5 2018-01-05 15:46:09 PST
youenn fablet
Comment 6 2018-01-05 15:46:55 PST
EWS Watchlist
Comment 7 2018-01-05 15:48:40 PST
Attachment 330600 [details] did not pass style-queue: ERROR: Source/ThirdParty/libwebrtc/Source/webrtc/base/socket.h:184: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 8 2018-01-05 16:46:12 PST
Created attachment 330606 [details] Patch for landing
EWS Watchlist
Comment 9 2018-01-05 16:47:36 PST
Attachment 330606 [details] did not pass style-queue: ERROR: Source/ThirdParty/libwebrtc/Source/webrtc/base/socket.h:184: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 10 2018-01-05 17:19:34 PST
Comment on attachment 330606 [details] Patch for landing Clearing flags on attachment: 330606 Committed r226475: <https://trac.webkit.org/changeset/226475>
WebKit Commit Bot
Comment 11 2018-01-05 17:19:36 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12 2018-01-05 17:20:32 PST
Note You need to log in before you can comment on or make changes to this bug.