Close WebRTC sockets when marked as defunct https://bugs.webkit.org/show_bug.cgi?id=177324 rdar://problem/35244931

Patch by Youenn Fablet <youenn@apple.com> on 2018-01-05
Reviewed by Eric Carlson.

In case selected sockets return an error when trying to accept an incoming socket,
check whether the socket is defunct or not.
If so, close it properly.

* Source/webrtc/base/asynctcpsocket.cc:
* Source/webrtc/base/physicalsocketserver.cc:
* Source/webrtc/base/socket.h:

Canonical link: https://commits.webkit.org/197191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226475 268f45cc-cd09-0410-ab3c-d52691b4dbfc